--- a/recover-matrix-server/ansible.cfg
+++ b/recover-matrix-server/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 retry_files_enabled = False
+callback_whitelist = profile_tasks
+host_key_checking = False
 
 [connection]
 pipelining = True
