--- a/recover-matrix-server/roles/recover-matrix-server/tasks/create_token.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/create_token.yml
@@ -31,4 +31,4 @@
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_master_token }}"
   register: awx_session_token
-  #no_log: True
+  no_log: True
