--- a/recover-matrix-server/roles/recover-matrix-server/tasks/restore_backup.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/restore_backup.yml
@@ -15,11 +15,11 @@
     src: "/var/lib/awx/projects/backups/{{ matrix_domain }}-borg_backup.yml"
     dest: "/tmp/{{ matrix_domain }}-borg_backup.yml"
     flat: yes
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
 
 - name: Include borg backup password from variable file
   include_vars: "/tmp/{{ matrix_domain }}-borg_backup.yml"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
 
 #2) Restore backup of /matrix from borg repo:
 
@@ -38,15 +38,15 @@
   shell: |
     BORG_PASSPHRASE="{{ awx_backup_encryption_passphrase }}" borg list "{{ backup_directory }}/Clients/{{ matrix_domain }}/matrix/"
   when: lock_file_2.stat.exists == false
-  register: borg_matrix_history
+  register: ( borg_matrix_history ) or ( view_borg_backup == true )
 
 - debug:
     msg: "{{ borg_matrix_history.stdout_lines }}"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
 
 - debug:
     msg: "{{ borg_matrix_history.stdout_lines | last }}"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
 
 # should let user pick which borg backup
 
@@ -59,16 +59,30 @@
   delegate_to: "{{ backup_server }}"
   shell: |
     BORG_PASSPHRASE="{{ awx_backup_encryption_passphrase }}" borg list "{{ backup_directory }}/Clients/{{ matrix_domain }}/database/"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
   register: borg_database_history
 
 - debug:
     msg: "{{ borg_database_history.stdout_lines }}"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
 
 - debug:
     msg: "{{ borg_database_history.stdout_lines | last }}"
-  when: lock_file_2.stat.exists == false
+  when: ( lock_file_2.stat.exists == false ) or ( view_borg_backup == true )
+
+- name: Set boolean value to exit playbook
+  set_fact:
+    awx_end_playbook: true
+  when: view_borg_backup == true
+
+- name: Result
+  debug: msg="{{ awx_cmd_output.stdout }}"
+  when: view_borg_backup == true
+
+- name: End playbook if this task list is called.
+  meta: end_play
+  when: awx_end_playbook is defined and awx_end_playbook|bool
+  when: view_borg_backup == true
 
 - name:
   set_fact:
