--- a/recover-matrix-server/inventory/host_vars/localhost/vars.yml
+++ b/recover-matrix-server/inventory/host_vars/localhost/vars.yml
@@ -1,6 +1,6 @@
 
 # Matrix Server Variables
-matrix_domain: aveng.xyz
+matrix_domain: stonin.xyz
 
 # AWX Variables
 awx_server: panel.topgunmatrix.com
