--- a/recover-matrix-server/roles/recover-matrix-server/tasks/backup_server.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/backup_server.yml
@@ -28,7 +28,7 @@
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
-  when: lock_file_1.stat.exists == false
+  when: ( lock_file_1.stat.exists == false ) and ( borg_backup_matrix_input | trim | length > 0 ) and ( borg_backup_database_input | trim | length > 0 )
   register: backup_job
 
 - name: Wait for job max 2 hours
@@ -38,7 +38,7 @@
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
-  when: lock_file_1.stat.exists == false
+  when: ( lock_file_1.stat.exists == false ) and ( borg_backup_matrix_input | trim | length > 0 ) and ( borg_backup_database_input | trim | length > 0 )
 
 - name: Create lock_file_1
   file:
