--- a/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
@@ -124,7 +124,7 @@
   when: lock_file_5.stat.exists == false
   register: deploy_job
 
-- name: Wait for job max 900s (15m)
+- name: Wait for deploy job max 900s (15m)
   awx.awx.tower_job_wait:
     job_id: "{{ deploy_job.id }}"
     timeout: 900
